# pkg/openapi/models.gen.go
@@ -3,28 +3,6 @@
 // Code generated by github.com/deepmap/oapi-codegen version v1.12.4 DO NOT EDIT.
 package openapi
 
-// Defines values for DigestAlgorithms.
-const (
-	Blake2b256     DigestAlgorithms = "Blake2b-256"
-	Blake2b384     DigestAlgorithms = "Blake2b-384"
-	Blake2b512     DigestAlgorithms = "Blake2b-512"
-	Blake2s128     DigestAlgorithms = "Blake2s-128"
-	Blake2s256     DigestAlgorithms = "Blake2s-256"
-	HighwayHash128 DigestAlgorithms = "HighwayHash-128"
-	HighwayHash256 DigestAlgorithms = "HighwayHash-256"
-	HighwayHash64  DigestAlgorithms = "HighwayHash-64"
-	MD4            DigestAlgorithms = "MD4"
-	MD5            DigestAlgorithms = "MD5"
-	SHA1           DigestAlgorithms = "SHA1"
-	SHA256         DigestAlgorithms = "SHA256"
-	SHA3256        DigestAlgorithms = "SHA3-256"
-	SHA3384        DigestAlgorithms = "SHA3-384"
-	SHA3512        DigestAlgorithms = "SHA3-512"
-	SHA384         DigestAlgorithms = "SHA384"
-	SHA512         DigestAlgorithms = "SHA512"
-	SHA512256      DigestAlgorithms = "SHA512-256"
-)
-
 // Defines values for DigestFormats.
 const (
 	Base32    DigestFormats = "base32"
@@ -33,8 +11,27 @@ const (
 	Hex       DigestFormats = "hex"
 )
 
-// DigestAlgorithms defines model for DigestAlgorithms.
-type DigestAlgorithms string
+// Defines values for HashAlgorithmName.
+const (
+	Blake2b256     HashAlgorithmName = "Blake2b-256"
+	Blake2b384     HashAlgorithmName = "Blake2b-384"
+	Blake2b512     HashAlgorithmName = "Blake2b-512"
+	Blake2s128     HashAlgorithmName = "Blake2s-128"
+	Blake2s256     HashAlgorithmName = "Blake2s-256"
+	HighwayHash128 HashAlgorithmName = "HighwayHash-128"
+	HighwayHash256 HashAlgorithmName = "HighwayHash-256"
+	HighwayHash64  HashAlgorithmName = "HighwayHash-64"
+	MD4            HashAlgorithmName = "MD4"
+	MD5            HashAlgorithmName = "MD5"
+	SHA1           HashAlgorithmName = "SHA1"
+	SHA256         HashAlgorithmName = "SHA256"
+	SHA3256        HashAlgorithmName = "SHA3-256"
+	SHA3384        HashAlgorithmName = "SHA3-384"
+	SHA3512        HashAlgorithmName = "SHA3-512"
+	SHA384         HashAlgorithmName = "SHA384"
+	SHA512         HashAlgorithmName = "SHA512"
+	SHA512256      HashAlgorithmName = "SHA512-256"
+)
 
 // DigestFormats Hash digest encoding format
 type DigestFormats string
@@ -45,6 +42,17 @@ type ErrorResponseContent struct {
 	Error *string `json:"Error,omitempty"`
 }
 
+// HashAlgorithm defines model for HashAlgorithm.
+type HashAlgorithm struct {
+	Endpoint     string            `json:"Endpoint"`
+	MaxKeyLength int               `json:"MaxKeyLength"`
+	MinKeyLength int               `json:"MinKeyLength"`
+	Name         HashAlgorithmName `json:"Name"`
+}
+
+// HashAlgorithmName defines model for HashAlgorithmName.
+type HashAlgorithmName string
+
 // SuccessResponseContent defines model for SuccessResponseContent.
 type SuccessResponseContent struct {
 	// Digest Hash Digest in the format requested, matching DigestEnc
@@ -54,8 +62,8 @@ type SuccessResponseContent struct {
 	DigestEnc DigestFormats `json:"DigestEnc"`
 
 	// Key Hex format key used for Hashing
-	Key  string           `json:"Key"`
-	Type DigestAlgorithms `json:"Type"`
+	Key  *string           `json:"Key,omitempty"`
+	Type HashAlgorithmName `json:"Type"`
 }
 
 // GetHashAlgorithmDigestFormatParams defines parameters for GetHashAlgorithmDigestFormat.
